# SDHCAL

./: .project  CMakeLists.txt  INSTALL.txt  README.txt
include/: CaloHit.h  CaloHitHelper.h  CartesianVector.h  CutProcessor.h  Linear3DFit.h  TTreeWrapper.h  ThreeVector.h  Typedef.h
include/processors/: CutProcessor.h  OverlayEstimatorProcessor.h  SDHCALProcessor.h
macros/: Minimisation.C  Minimisation.h
results/: EREC_LIN_ERESOL_SIM_FTFP_BERT_HP.C  EREC_LIN_ERESOL_SIM_FTFP_BERT_HP.C~  EREC_LIN_ERESOL_SIM_FTF_BIC.C  EREC_LIN_ERESOL_SIM_FTF_BIC.C~  EREC_LIN_ERESOL_TB_SEPAUG_2012.C  EREC_LIN_ERESOL_TB_SEPAUG_2012.C~
run/: run_sdhcal_processor.sh
src/: CaloHit.cc  CaloHitHelper.cc  CartesianVector.cc  CutProcessor.cc  Linear3DFit.cc  OverlayEstimatorProcessor.cc  TTreeWrapper.cc
src/processors/: CutProcessor.cc  SDHCALProcessor.cc
xml/: MarlinCut.xml  MarlinOverlay.xml  MarlinSDHCAL.xml
